force-app/main/default/objects/Known_Issue__c/Known_Issue__c.object-meta.xml
<CustomObject>
    <label>Known Issue</label>
    <nameField>
        <displayFormat>KI-{00000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>