force-app/main/default/objects/Known_Issue__c/fields/Affected_version__c.field-meta.xml
<CustomField>
    <fullName>Affected_version__c</fullName>
    <formula>TEXT ( Front_Back__c )+&quot; &quot;+TEXT( Major__c )+TEXT( Minor__c )+TEXT( Patch__c )+&quot; &quot;+TEXT( HigherLower__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affected version</label>
    <type>Text</type>
</CustomField>