force-app/main/default/objects/Known_Issue__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETA</label>
    <length>15</length>
    <type>Text</type>
</CustomField>