force-app/main/default/objects/Known_Issue__c/fields/Front_Back__c.field-meta.xml
<CustomField>
    <fullName>Front_Back__c</fullName>
    <label>Front-Back</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Backend All</fullName>
            </value>
            <value>
                <fullName>Backend Heroku US</fullName>
            </value>
            <value>
                <fullName>Backend Heroku EU</fullName>
            </value>
            <value>
                <fullName>Backend CopaGCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>