force-app/main/default/objects/Known_Issue__c/fields/HigherLower__c.field-meta.xml
<CustomField>
    <fullName>HigherLower__c</fullName>
    <label>HigherLower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>and higher</fullName>
            </value>
            <value>
                <fullName>and lower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>