force-app/main/default/objects/Known_Issue__c/fields/Internal_ETA__c.field-meta.xml
<CustomField>
    <fullName>Internal_ETA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal ETA</label>
    <type>Date</type>
</CustomField>