force-app/main/default/objects/Known_Issue__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v13</fullName>
            </value>
            <value>
                <fullName>v14</fullName>
            </value>
            <value>
                <fullName>v15</fullName>
            </value>
            <value>
                <fullName>v16</fullName>
            </value>
            <value>
                <fullName>v17</fullName>
            </value>
            <value>
                <fullName>v18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>49</fullName>
            </value>
            <value>
                <fullName>v50</fullName>
            </value>
            <value>
                <fullName>v51</fullName>
            </value>
            <value>
                <fullName>v52</fullName>
            </value>
            <value>
                <fullName>v53</fullName>
            </value>
            <value>
                <fullName>v54</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>57</fullName>
            </value>
            <value>
                <fullName>58</fullName>
            </value>
            <value>
                <fullName>59</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>