force-app/main/default/objects/Known_Issue__c/fields/Steps_to_reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_reproduce__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steps to reproduce</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>