force-app/main/default/objects/Known_Issue__c/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workaround</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>